--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Shared/Partial/ZiPoolInfoListe.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Shared/Partial/ZiPoolInfoListe.cshtml
@@ -8,12 +8,13 @@
     }
 
     .zipool-item-original {
-        background-color: #a0c539;
+        background-color: #0A2D69;
+        color: #ffffff;
     }
 
     .zipool-item-copy {
-        background-color: #cddf9a; /* fallback color for older browsers */
-        background-color: rgba(160, 197, 57, 0.5);
+        background-color: #9B9B9B;
+        color: #ffffff;
     }
     
     .zipool-item-error {
