--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/ShoppingCart/Common.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/ShoppingCart/Common.cshtml
@@ -271,6 +271,10 @@
             loadingShow: true,
             success: function (result) {
                 GridShoppingCart_MultiSelectUpdate(result.allSelectionCount);
+
+                _gridShoppingCart_MultiSelectItemCount = result.allSelectionCount;
+                GridShoppingCart_MultiSelectItemCountRefresh();
+
                 FilterGrid("GridShoppingCart");
             }
         });
@@ -286,9 +290,9 @@
 
 
         if (_submitRightAuftraegeNichtAbsenden.toLowerCase() === "true") {
-            $(".shopping-cart-item-selection-count").hide();
+            $(".shopping-cart-item-selection-count").addClass("hide");
         } else {
-            $(".shopping-cart-item-selection-count").show();
+            $(".shopping-cart-item-selection-count").removeClass("hide");
         }
 
         $(".shopping-cart-item-selection-count").html(GridShoppingCart_MultiSelectItemCountHint(count));
