--- a/inetpub/wwwroot/ServicesMvc/Views/Equi/ReportErweiterterBriefbestand.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Equi/ReportErweiterterBriefbestand.cshtml
@@ -76,7 +76,7 @@
         $.ajax(
         {
             type: "POST",
-            url: "ItemEdit",
+            url: "ReferenceItemEdit",
             data: { fin: fin },
             loadingShow: true,
             success: function (result) {
