Auswahlgrid Selektion angepasst

--- a/inetpub/wwwroot/ServicesMvc/Views/Equi/Briefversand/FahrzeugAuswahl.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Equi/Briefversand/FahrzeugAuswahl.cshtml
@@ -65,7 +65,9 @@ else
         {
             columns.XBound(c => c.Action)
                 .ClientTemplate("<# if (data.IsMissing) { #> <span><i class='icon-bell margin-left-5'></i></span> <# } else { #><input type='checkbox' name='checkedRecords' <# if (data.IsSelected) { #> checked <# } #> value='<#= data.Fahrgestellnummer #>' onchange='OnSelectionChange_GridFahrzeugAuswahl($(this))' /> <# } #>")
-                .HeaderTemplate("<input type='checkbox' id='uncheckAllRecords' onchange='GridFahrzeugAuswahl_OnAllSelectionChange($(this).is(\":checked\"))' />")
+                .HeaderTemplate("<input type='checkbox' id='uncheckAllRecords' onchange='GridFahrzeugAuswahl_OnAllSelectionChange($(this).is(\":checked\"))' />" +
+                 "<i class='icon-remove cursor-pointer tooltips' data-original-title='" + Localize.MultiSelectUncheckAllFilteredItems + "' data-placement='right' id='uncheckAllRecords' onclick='GridFahrzeugAuswahl_OnAllSelectionChange(false)'></i>"
+                )
                 .Filterable(false);
 
             columns.XBound(c => c.Kennzeichen);
