Design-Anpassungen ZI-Pool

--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Shared/Partial/ZiPoolInfoListe.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Shared/Partial/ZiPoolInfoListe.cshtml
@@ -5,10 +5,11 @@
     .dd-handle  {
         height: auto;
         cursor: auto !important;
+        border-radius: 5px !important;
     }
 
     .zipool-item-original {
-        background-color: #0A2D69;
+        background-color: #6E8CBF;
         color: #ffffff;
     }
 
