--- a/inetpub/wwwroot/ServicesMvc/Views/Equi/Briefversand/FahrzeugAuswahl.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Equi/Briefversand/FahrzeugAuswahl.cshtml
@@ -54,7 +54,7 @@ else
         <i class="icon-check"></i><span class="padding-left-5 bold"></span>
     </span>
 </h4> 
-
+<label id="count" style="display: none"></label>
 @Html.SpanAlert("Message")
 
 @(Html.XTelerik()
