--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/Partial/LayoutPage/Scripts.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/Partial/LayoutPage/Scripts.cshtml
@@ -465,6 +465,9 @@
                 setTimeout(function() {
                     grid.pageTo(page);
                     $("#" + gridName).trigger('filter_all_columns');
+
+                    if (typeof(result.allSelected) !== "undefined")
+                        eval("OnPostFilterPrivate_" + gridName + "(" + result.allSelected + ")");
                 }, 500);
             }
         });
